customer transaction report added sort

--- a/WinFormApp/WinFormAppDev/OQS_Data_Config/frmMain.resx
+++ b/WinFormApp/WinFormAppDev/OQS_Data_Config/frmMain.resx
@@ -120,8 +120,17 @@
   <metadata name="ACCOUNTVIPLEVELBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>862, 10</value>
   </metadata>
+  <metadata name="ACCOUNTVIPLEVELBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>862, 10</value>
+  </metadata>
   <metadata name="dsLoginAccountBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>631, 10</value>
+  </metadata>
+  <metadata name="dsLoginAccountBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>631, 10</value>
+  </metadata>
+  <metadata name="dsLoginAccount.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>19, 10</value>
   </metadata>
   <metadata name="dsLoginAccount.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>19, 10</value>
